RESOLVED FIXED 258090
Leak of MTLSharedTextureHandle in GraphicsContextGLCocoa.mm
https://bugs.webkit.org/show_bug.cgi?id=258090
Summary Leak of MTLSharedTextureHandle in GraphicsContextGLCocoa.mm
David Kilzer (:ddkilzer)
Reported 2023-06-14 13:53:34 PDT
Leak of MTLSharedTextureHandle in GraphicsContextGLCocoa.mm. Regressed in commit: [WebGL] Abstract attaching/detaching external images <https://bugs.webkit.org/show_bug.cgi?id=256945> <rdar://109495127> <https://commits.webkit.org/264712@main>
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-14 13:54:12 PDT
David Kilzer (:ddkilzer)
Comment 2 2023-06-14 14:01:20 PDT
EWS
Comment 3 2023-06-14 18:35:24 PDT
Committed 265174@main (de415e8be619): <https://commits.webkit.org/265174@main> Reviewed commits have been landed. Closing PR #14972 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.