Leak of MTLSharedTextureHandle in GraphicsContextGLCocoa.mm https://bugs.webkit.org/show_bug.cgi?id=258090 <rdar://110796945>

Reviewed by Dan Glastonbury.

Add back use of adoptNS() when creating MTLSharedTextureHandle objects
to fix the leaks.  This was accidentally removed by 264712@main.

* Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::GraphicsContextGLCocoa::createAndBindExternalImage):

Canonical link: https://commits.webkit.org/265174@main