Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm
@@ -723,11 +723,11 @@ static std::optional<GraphicsContextGL::ExternalImageAttachResult> createAndBind
 
 std::optional<GraphicsContextGL::ExternalImageAttachResult> GraphicsContextGLCocoa::createAndBindExternalImage(GCGLenum target, IOSurface* surface)
 {
-    MTLSharedTextureHandle* handle = [[MTLSharedTextureHandle alloc] initWithIOSurface:surface->surface() label:@"WebXR"];
+    auto handle = adoptNS([[MTLSharedTextureHandle alloc] initWithIOSurface:surface->surface() label:@"WebXR"]);
     if (!handle)
         return std::nullopt;
 
-    return createAndBindSharedTextureToExternalImage(platformDisplay(), target, handle);
+    return createAndBindSharedTextureToExternalImage(platformDisplay(), target, handle.get());
 }
 #endif
 
@@ -741,25 +741,25 @@ std::optional<GraphicsContextGL::ExternalImageAttachResult> GraphicsContextGLCoc
     return std::nullopt;
 #else // !PLATFORM(IOS_FAMILY_SIMULATOR
 
-    MTLSharedTextureHandle* handle = nil;
+    RetainPtr<MTLSharedTextureHandle> handle;
     return WTF::switchOn(WTFMove(source),
         [&](ExternalImageSourceIOSurfaceHandle&& ioSurface) -> std::optional<ExternalImageAttachResult> {
             auto surface = IOSurface::createFromSendRight(WTFMove(ioSurface.handle));
             if (!surface)
                 return std::nullopt;
 
-            handle = [[MTLSharedTextureHandle alloc] initWithIOSurface:surface->surface() label:@"WebXR"];
+            handle = adoptNS([[MTLSharedTextureHandle alloc] initWithIOSurface:surface->surface() label:@"WebXR"]);
             if (!handle)
                 return std::nullopt;
 
-            return createAndBindSharedTextureToExternalImage(platformDisplay(), target, handle);
+            return createAndBindSharedTextureToExternalImage(platformDisplay(), target, handle.get());
         },
         [&](ExternalImageSourceMTLSharedTextureHandle&& sharedTexture) -> std::optional<ExternalImageAttachResult> {
-            handle = [[MTLSharedTextureHandle alloc] initWithMachPort:sharedTexture.handle.sendRight()];
+            handle = adoptNS([[MTLSharedTextureHandle alloc] initWithMachPort:sharedTexture.handle.sendRight()]);
             if (!handle)
                 return std::nullopt;
 
-            return createAndBindSharedTextureToExternalImage(platformDisplay(), target, handle);
+            return createAndBindSharedTextureToExternalImage(platformDisplay(), target, handle.get());
         });
 #endif
 }
